[gd_scene load_steps=4 format=2]

[ext_resource path="res://effects/WaveEmitter.gd" type="Script" id=1]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="WaveEmitter" type="Node2D"]
script = ExtResource( 1 )

[node name="PeriodTimer" type="Timer" parent="."]
autostart = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fade = SubResource( 1 )

[connection signal="timeout" from="PeriodTimer" to="." method="_on_PeriodTimer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
